# Customer-Support-Agent--LangGraph

./: README.md  app.py  pyproject.toml  requirements.txt  sample.json  test_insertDB.py  test_out_of_scope.py  test_pipeline.py  test_retriever.py
config/: stages.yaml
data/: kb_faq.json  tickets.json
data/chroma/: chroma.sqlite3
pipeline/abilities/: knowledge_base_search.py
scripts/: kb_ingest.py  run.sh
src/langie/: __init__.py  abilities.py  cli.py  logger.py  mcp_client.py  models.py  pipeline.py  retriever.py
static/: index.html
